# paper-to-notion

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
experiments/: arXiv_api.ipynb  exp_notion_api.ipynb
src/: main.py
src/app/: app_window.py  controller.py  main.py
src/app/ui/views/: loading_view.py  main_view.py  request_view.py  result_view.py
src/domain/: models.py
src/services/: arxiv_service.py  notion_service.py  translation_service.py
tests/: conftest.py  test_translation_service.py
