[project]
name = "paper-to-notion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "feedparser>=6.0.12",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "openai>=1.108.1",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
